# SnipasteOCR

./: App.py  FolderDetect.py  LICENSE  README.md  config.yml  install.bat  install.sh  main.py  pyproject.toml  req.txt  requirements.txt  打包.txt
.github/workflows/: build.yml
src/: __init__.py
src/core/: folder_monitor.py  ocr_processor.py  ocr_thread.py  resource_path.py
src/ui/: main_window.py  preview_window.py
src/utils/: logging_config.py  translator.py
