[project]
name = "snipasteocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastdeploy-python>=1.0.7",
    "opencv-python==4.10.0.84",
    "pyinstaller>=6.11.1",
    "pyperclip>=1.9.0",
    "pyqt6>=6.8.0",
    "pyyaml>=6.0.2",
    "watchdog>=6.0.0",
]
